[gd_scene load_steps=12 format=3 uid="uid://6wdvh06761rp"]

[ext_resource type="PhysicsMaterial" uid="uid://cxvwtvdu0xq6j" path="res://Scenes/BallMaterial.tres" id="1_qe7tt"]
[ext_resource type="Script" path="res://Scripts/SawScript.gd" id="2_mtq2n"]
[ext_resource type="Texture2D" uid="uid://3hegmkhth6mm" path="res://Images/pixel saw.png" id="3_1no1e"]
[ext_resource type="Texture2D" uid="uid://prfri12ybhph" path="res://Images/ball.png" id="3_a2in1"]
[ext_resource type="Script" path="res://Scripts/Hurtbox.gd" id="4_5thmi"]
[ext_resource type="Script" path="res://Scripts/SawCollision.gd" id="4_8w52m"]
[ext_resource type="LabelSettings" uid="uid://knw365el3j1i" path="res://Scenes/TextLabelSettings.tres" id="5_ebep6"]
[ext_resource type="AudioStream" uid="uid://ds4f26yv6ccrk" path="res://Sounds/SawHit.wav" id="8_3k8ii"]
[ext_resource type="PackedScene" uid="uid://7rn1b2tq5q05" path="res://Scenes/ball_pause_timer.tscn" id="9_kw7gn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_meju2"]
radius = 23.0217

[sub_resource type="CircleShape2D" id="CircleShape2D_x6kyp"]
radius = 64.0

[node name="Saw" type="RigidBody2D"]
physics_material_override = ExtResource("1_qe7tt")
angular_damp = 100.0
script = ExtResource("2_mtq2n")

[node name="SawBase" type="Node2D" parent="."]
scale = Vector2(1.33816, 1.33816)

[node name="Sprite2D" type="Sprite2D" parent="SawBase"]
position = Vector2(2.23517e-07, -32.881)
rotation = 2.35619
scale = Vector2(2.65285, 2.65285)
texture = ExtResource("3_1no1e")

[node name="SawCollision" type="Area2D" parent="SawBase"]
position = Vector2(0.109372, -36.3795)
collision_layer = 4
collision_mask = 6
script = ExtResource("4_8w52m")
damage = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SawBase/SawCollision"]
polygon = PackedVector2Array(-9.90493, 23.4551, -9.07848, 15.1906, -2.46691, -14.5615, 9.10333, -14.5615, 9.10333, 23.4551)

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(1, 0.439216, 0.533333, 1)
scale = Vector2(0.19, 0.19)
texture = ExtResource("3_a2in1")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4
script = ExtResource("4_5thmi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_meju2")
debug_color = Color(0.254708, 0.63485, 3.85046e-07, 0.42)

[node name="PhysicsShape" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2(0.333, 0.333)
shape = SubResource("CircleShape2D_x6kyp")

[node name="HealthDisplay" type="Label" parent="."]
offset_left = -20.0
offset_top = -12.0
offset_right = 20.0
offset_bottom = 11.0
label_settings = ExtResource("5_ebep6")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="SawAudioStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_3k8ii")

[node name="BallPauseTimer" parent="." instance=ExtResource("9_kw7gn")]

[connection signal="timeout" from="BallPauseTimer" to="." method="_onPauseTimerTimeout"]
